# mlir_cheatsheet

compile/: README.md  build.sh
install/: README.md
standalone/: CMakeLists.txt  build.sh
toy_example/: CMakeLists.txt  README.md  build.sh  run.sh
toy_example/ch2/: CMakeLists.txt
toy_example/ch3/: CMakeLists.txt  transpose.toy
toy_example/ch4/: CMakeLists.txt  toyc.cpp
toy_example/ch5/: CMakeLists.txt
toy_example/ch6/: CMakeLists.txt
toy_example/ch7/: CMakeLists.txt
toy_example_execise/: CMakeLists.txt  build.sh  run.sh  toyc.cpp
toy_example_execise/include/toy/: CMakeLists.txt  Passes.h  Rewrite.td  ShapeInferenceInterface.h  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
toy_example_execise/mlir/: CMakeLists.txt  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  Rewrite.cpp  ShapeInferencePass.cpp  ToyDialect.cpp  ToyOps.cpp
toy_example_execise/tests/: ch1.ast
